start of wednesday

--- a/app/views/authorizations/index.html.erb
+++ b/app/views/authorizations/index.html.erb
@@ -12,7 +12,7 @@
 <div class="welcome">
 <h1>Welcome to Cabbage</h1>
 
-<%= form_tag do %>                      <!-- this creates a new user for some reason -- need to figure this out -->
+<%= form_tag do %>                      
     <h3>Username: <%= text_field(:user, :username) %></h3>
     
     <h3>Password: <%= password_field(:user, :password) %></h3>
