--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -21,9 +21,12 @@
     </style>
 </head>
 
-<h1>Portfolio Title: <%= @portfolio.title %></h1><br />
+<h1>Portfolio Title: <%= @portfolio.title %></h1>
 
-<h3>Portfolio Owner: <%= @portfolio.user.full_name %></h3><br /> <!-- add to top right of page with css -->
+<h2>Portfolio +/-: $<%= @portfolio.portfolio_plus_minus %></h2> <!-- with CSS: if negative number turn text red, if positive turn text green -->
+
+<h3>Portfolio Owner: <%= link_to @portfolio.user.full_name, user_path(@portfolio.user) %></h3><br /> <!-- add to top right of page with css -->
+<hr>
 
 <h3>Available Ca$h to Invest: $<%= @portfolio.cash %> </h3><br /> 
 
@@ -37,11 +40,9 @@
     <%= number_field_tag "withdraw_cash" %>
     <%= submit_tag "Withdraw Cash" %><br />
 <% end %>
-<!-- 
-@portfolio.increment!(:cash, amount from field) 
-@portfolio.decrement!(:cash, amount from field)
--->
+<hr>
 
+<!-- table of every stock in the portfolio-->
 <h3>Stocks In My Portfolio:</h3>
 <table class="table">
 <tr>    
@@ -50,6 +51,7 @@
     <th>Current Price</th>
     <th># of Shares Owned</th>
     <th>Price Paid</th>
+    <th>+/-</th>
 </tr>    
 <tr>
     <% @portfolio.transactions.each do |transaction| %>
@@ -58,6 +60,7 @@
     <td>$<%= transaction.stock.price %></td>
     <td><%= transaction.num_of_shares %></td>
     <td>$<%= transaction.share_price %></td>
+    <td>$<%= transaction.plus_minus %></td> <!-- with CSS: if negative number turn text red, if positive turn text green -->
     </tr>
     <% end %>
 </table><br />
