--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <!-- need styling cabbage logo -->
 
-<h1> Welcome <%= @user.full_name %>!</h1><br />
+<h1> Welcome to Cabbage 🥬 <%= @user.full_name %>!</h1><br />
 
 <h3>Total Balance - Ca$h + Investments</h3> <!-- add up all portfolio balances + unvested cash -->
 <h3>Cash to Invest: $<%= @user.balance %></h3><br />
