--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -6,12 +6,11 @@
     
     <h4>Ca$h to Trade: <%= f.number_field(:cash) %></h4>
 
-    <h4>User: <%= f.collection_select(:user_id, User.all, :id, :username) %></h4> <!-- how to not make this a collection_select so the portfolio knows who the user is - [:session]? -->
+    <!-- <h4>User: <%= f.collection_select(:user_id, User.all, :id, :username) %></h4> how to not make this a collection_select so the portfolio knows who the user is - [:session]? -->
 
     <%= f.submit "Create" %>
     
 <% end %>
 
-<!-- add "back to user" button -->
 
 
