--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -65,7 +65,5 @@
     <% end %>
 </table><br />
 
-<%= link_to "Buy Stocks", stocks_path %>
-
-
+<%= link_to "Buy Stocks for this Portfolio", stocks_path, portfolio_id: @portfolio.id %>
 
