--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,17 +1,17 @@
+<h1>Stocks for Purchase</h1><br />
 
-<h1>Stocks</h1><br />
 <ul>
-   <%= @stocks["companiesPriceList"].each_with_index do |stock,i| %> <!--  call API STOCKS -->
+   <%= @stocks["companiesPriceList"].each_with_index do |stock, i| %>  <!--  call API STOCKS -->
    
-   <span>Company: <%=stock["symbol"]%></span> <span id ="price">Price: <%= stock["price"]%></span>
+   <span>Symbol: <%= stock["symbol"] %></span> | <span id ="price">Price: $<%= stock["price"] %></span> <!-- add company name to this line if we have time -->
    <!--  Get all info needed for params -->
-   <%=form_tag "/transactions" do %>
-     <input id="stock_id" name="stock[stock_id]" type="hidden" value=<%=i%> />
-     <%=number_field_tag "stock[num_of_shares]", in: 1..1000%>
-     <%=hidden_field_tag 'stock[share_price]', stock["price"]%>
-     <%=submit_tag "Buy"%>
-     <%end%>
-        <br>
+      <%=form_tag "/transactions" do %>
+         <input id="stock_id" name="stock[stock_id]" type="hidden" value=<%=i%> />
+         <%=number_field_tag "stock[num_of_shares]", in: 1..1000%>
+         <%=hidden_field_tag 'stock[share_price]', stock["price"]%>
+         <%=submit_tag "Buy"%>
+      <%end%>
+      <br />
    <%end%>
    </ul>
    
