--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,11 +1,19 @@
-<h1>Stocks for Purchase</h1><br />
+<h1>Stocks for Purchase</h1>
+<h3>Available Cash to Invest: $<%= @logged_in_user.balance %></h3>
+<hr>
+
+<%= link_to @logged_in_user.full_name, user_path(@logged_in_user) %> <!-- link back to user's page -->
+
+<% if flash[:message] %>
+   <%= flash[:message] %> --> <%= link_to @logged_in_user.full_name, user_path(@logged_in_user) %>
+<% end %>
 
 <ul>
-   <%= @stocks["companiesPriceList"].each_with_index do |stock, i| %>  <!--  call API STOCKS -->
+   <% @stocks["companiesPriceList"].each_with_index do |stock, i| %>  <!--  call API STOCKS -->
    
    <span>Symbol: <%= stock["symbol"] %></span> | <span id ="price">Price: $<%= stock["price"] %></span> <!-- add company name to this line if we have time -->
    <!--  Get all info needed for params -->
-      <%=form_tag "/transactions" do %>
+      <%= form_tag "/transactions" do %>
          <%= number_field_tag "stock[num_of_shares]" %>
          <%= hidden_field_tag "stock[share_price]", stock["price"] %>
          <%= hidden_field_tag "stock[portfolio_id]", @portfolio_id %>
@@ -15,4 +23,5 @@
       <br />
    <%end%>
    </ul>
+
    
