--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -3,7 +3,7 @@
         table {
             border-collapse: collapse;
             border-spacing: 45px;
-            width: 700px;
+            width: 700px; 
         }
 
         th {
@@ -22,24 +22,13 @@
 </head>
 
 <h1>Portfolio Title: <%= @portfolio.title %></h1>
-
-<h2>Portfolio +/-: $<%= @portfolio.portfolio_plus_minus %></h2> <!-- with CSS: if negative number turn text red, if positive turn text green -->
+<h2>Portfolio Value: $ <%= @portfolio.portfolio_balance %></h2>
+<h2>Portfolio +/-: $ <%= @portfolio.portfolio_plus_minus %></h2> <!-- with CSS: if negative number turn text red, if positive turn text green -->
 
 <h3>Portfolio Owner: <%= link_to @portfolio.user.full_name, user_path(@portfolio.user) %></h3><br /> <!-- add to top right of page with css -->
 <hr>
 
-<h3>Available Ca$h to Invest: $<%= @portfolio.cash %> </h3><br /> 
-
-<!-- buttons to inc/decrement @portfolio.cash attribute -->
-<%= form_tag portfolio_path, method: "patch" do %>
-    <%= number_field_tag "add_cash" %>
-    <%= submit_tag "Add Cash" %><br />
-<% end %>
-
-<%= form_tag portfolio_path, method: "patch" do %>
-    <%= number_field_tag "withdraw_cash" %>
-    <%= submit_tag "Withdraw Cash" %><br />
-<% end %>
+<h3>Available Ca$h to Invest: $<%= @logged_in_user.balance %> </h3><br /> 
 <hr>
 
 <!-- table of every stock in the portfolio-->
@@ -52,16 +41,20 @@
     <th># of Shares Owned</th>
     <th>Price Paid</th>
     <th>+/-</th>
+    <th>Sell</th>
 </tr>    
 <tr>
     <% @portfolio.transactions.each do |transaction| %>
-    <td><%= transaction.stock.company_name %></td>
-    <td><%= transaction.stock.symbol %></td>
-    <td>$<%= transaction.stock.price %></td>
-    <td><%= transaction.num_of_shares %></td>
-    <td>$<%= transaction.share_price %></td>
-    <td>$<%= transaction.plus_minus %></td> <!-- with CSS: if negative number turn text red, if positive turn text green -->
-    </tr>
+        <% if transaction.num_of_shares > 0 %>
+            <td><%= transaction.stock.company_name %></td>
+            <td><%= transaction.stock.symbol %></td>
+            <td>$<%= transaction.stock.current_price %></td>
+            <td><%= transaction.num_of_shares %></td>
+            <td>$<%= transaction.share_price %></td>
+            <td>$<%= transaction.plus_minus %></td> <!-- with CSS: if negative number turn text red, if positive turn text green -->
+            <td><%= button_to "Sell", edit_transaction_path(transaction), method: "get" %></td>
+            </tr>
+            <% end %>
     <% end %>
 </table><br />
 
