--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -2,7 +2,7 @@
 
 <h3><%= link_to @logged_in_user.full_name, user_path(@logged_in_user) %></h3> <!-- add nav bar with link back to user or style this link using css -->
 
-<h3>Available Cash to Invest: $ <%= @logged_in_user.balance %></h3>
+<h3>Available Cash to Invest: <%= number_to_currency(@logged_in_user.balance) %></h3>
 
 <%= form_for @portfolio do |f| %> 
 
