--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<div class="main">
 <h1>Sign Up for Cabbage 🥬</h1><br />
 
 <%= form_for @user do |f| %> 
@@ -16,3 +17,4 @@
     <%= f.submit "Submit" %>
     
 <% end %>
+<div>
