--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,3 +1,4 @@
+<div class="main">
 <h1>Create New Portfolio</h1>
 
 <h3><%= link_to @logged_in_user.full_name, user_path(@logged_in_user) %></h3> <!-- add nav bar with link back to user or style this link using css -->
@@ -11,6 +12,6 @@
     <%= f.submit "Create" %>
     
 <% end %>
-
+</div>
 
 
