--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,3 +1,4 @@
+<div class="main">
 <h1>Stocks for Purchase</h1>
 <h3>Available Cash to Invest: <%= number_to_currency(@logged_in_user.balance) %></h3>
 <hr>
@@ -23,5 +24,5 @@
       <br />
    <%end%>
    </ul>
-
+</div>
    
