--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -1,3 +1,4 @@
+<div class="main">
 <h1>Sell some <%= @transaction.stock.company_name %></h1>
 <h3>Price Paid Per Share: $<%= @transaction.share_price %></h3>
 <h3>Current Number of Shares: <%= @transaction.num_of_shares %></h3>
@@ -9,3 +10,4 @@
 
     <%= f.submit "Sell" %>
 <% end %>
+</div>
