--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,10 @@ body {
     overflow-y: scroll;
 }
 
-.portfolio-parent {
+.sign-out-btn {
+    position: absolute; 
+    top: 10px; 
+    right: 10px; 
 }
 
 
