--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,7 @@
     <%= link_to("Create A New Portfolio", new_portfolio_path) %> <!-- need to css style as a button -->
 </div>
 
-<div class="sign-out-button">
-    <%= button_to("Sign Out", root_path, method: "delete") %>
+<div class="sign-out-btn">
+    <%= button_to("Log Out", root_path, method: "delete") %>
 </div>
 </div>
