--- a/app/views/login/new.html.erb
+++ b/app/views/login/new.html.erb
@@ -8,13 +8,15 @@
             margin: 100px 500px;
         }
 
-        .input {
-            border-radius: 5px;
+        h1 {
+            padding: 0px 0px 20px 0px;
+            font-family: 'Syncopate', sans-serif;
+            font-size: 70px;
         }
     </style>
 </head>
 
-<div class="welcome text-center">
+<div class="welcome">
 <h1>Welcome to Cabbage</h1>
 
 <% if flash[:message] %>
