--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
  // Custom bootstrap variables must be set or imported *before* bootstrap.
  @import "bootstrap";
 
+ @import url('https://fonts.googleapis.com/css?family=Syncopate:700&display=swap');
+
 body {
     font-family: 'Roboto', sans-serif;
     text-align: center; 
@@ -30,16 +32,16 @@ body {
 
 .sign-out-btn {
     position: absolute; 
-    top: 10px; 
-    right: 10px; 
+    top: 50px; 
+    right: 50px; 
 }
-
 
 .portfolios-list  {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     width: 100%;
+    padding: 10px;
 }
 
 .each-portfolio {
@@ -47,8 +49,68 @@ body {
     height: 100px;
     width: 150px;
     align-content: center;
+    padding: 10px;
+    position: relative;
+    border-radius: 5px;
+    background-color: lightseagreen;
+    color: white;
+        
+    #port-link {
+            color: white;
+        }
+}
+
+.port-price {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
 }
 
 .input {
     border-radius: 5px;
+    margin-top: 25px;
 }
+
+#create-btn {
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 3px;
+    padding: 5px;
+    background-color: lightseagreen;
+    color: white;
+}
+
+#buy-btn {
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 3px;
+    padding: 5px;
+    background-color: lightseagreen;
+    color: white;
+}
+
+.stocks {
+    position: relative;
+    padding: 10px;
+
+    #buy-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+}
+
+.p-info {
+    position: relative;
+
+    #p-name {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+}
+
+
+
