--- a/app/views/transactions/edit.html.erb
+++ b/app/views/transactions/edit.html.erb
@@ -6,8 +6,8 @@
 
 <%= form_for @transaction do |f| %>
     <%= f.label :num_of_shares, "Number of Shares to Sell:" %>
-    <%= f.number_field :num_of_shares %><br />
+    <%= f.number_field :num_of_shares, class: "input" %><br />
 
-    <%= f.submit "Sell" %>
+    <%= f.submit "Sell", class: "btn btn-danger" %>
 <% end %>
 </div>
