--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,19 +2,17 @@
 <h1>Sign Up for Cabbage 🥬</h1><br />
 
 <%= form_for @user do |f| %> 
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %><br />
+    <%= f.text_field :first_name, class: "input", placeholder: "First Name" %><br />
     
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %><br />
+    <%= f.text_field :last_name, class: "input", placeholder: "Last Name" %><br />
 
-    <%= f.label :username %>
-    <%= f.text_field :username %><br />
 
-    <%= f.label :password %>
-    <%= f.password_field :password %><br />
+    <%= f.text_field :username, class: "input", placeholder: "Username" %><br />
 
-    <%= f.submit "Submit" %>
+
+    <%= f.password_field :password, class: "input", placeholder: "Password" %><br />
+
+    <%= f.submit "Submit", class: "btn btn-secondary" %>
     
 <% end %>
 <div>
